solc_mutator_ossfuzz_seed_corpus/test_sol/test_8c0be6926b3d5c1a48818eb8b5f54784b35168a98a8e6d0ecefa221e134710d2_0b1740169963304de810aac05bb01e7ddabe7946_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma abicoder v1;
pragma solidity >= 0.0.0;
function f0()  returns(int88 o0,bytes27 o1,int136 o2)
{

  unchecked {




  }
  o2 |= (~(31798419621609224702545624211098234739128) / 1163910002380078085756558429329832804498);
}
// ----
// TypeError 7366: (su0.sol:127-222): Operator |= not compatible with types int136 and rational_const -317...(34 digits omitted)...9129 / 1163...(32 digits omitted)...4498
